--- a/layouts/partials/widgets/hero.html
+++ b/layouts/partials/widgets/hero.html
@@ -7,13 +7,16 @@
   <div class="col-12 col-md-6 text-center text-md-left">
 {{ end }}
 
-    {{ with $page.Title }}
-      <h1 class="hero-title">{{ . | markdownify }}</h1>
-    {{ end }}
+    <div class="hero-welcome-banner">
+      {{ with $page.Title }}
+        <h1 class="hero-title">{{ . | markdownify }}</h1>
+      {{ end }}
 
-    {{ with $page.Content }}
-      <div class="hero-lead">{{ . }}</div>
-    {{ end }}
+      {{ with $page.Content }}
+        <div class="hero-lead">{{ . }}</div>
+      {{ end }}
+    </div>
+
 
     {{/* Call-to-action link */}}
     {{ if $page.Params.cta.url }}
